Fix gap on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ nav img {
 @media (max-width: 780px) {
   .card {
     flex-direction: column;
-    align-items: center;
+    gap: 0.75em;
   }
 
   .card-image {
